[tool.poetry]
name = "easy-track"
version = "1.0.0"
description = ""
authors = ["Bogdan Kovtun <psirex48@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
setuptools = "^63.0.0"
python = ">=3.9,<3.11"
eth-abi = "^2.1.1"
eth-brownie = "^1.19.3"

[tool.poetry.group.dev.dependencies]
slither-analyzer = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
