[tool.poetry]
name = "easy-track"
version = "1.1.0"
description = ""
authors = ["Bogdan Kovtun <psirex48@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-brownie = "1.20.2"

[tool.poetry.group.dev.dependencies]
slither-analyzer = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:abi.(decode|encode):DeprecationWarning",
    "ignore:rpc.(snapshot|revert):FutureWarning",
]